<resources>
    <string name="app_name">MisionArbol</string>

    <string name="action_settings">Configuración</string>
    <string name="action_search">Buscar</string>
    <string name="action_carrito">Añadir al carrito</string>

    <string name="item_init">Tomar Foto</string>
    <string name="item_how_work">Como Funciona?</string>
    <string name="item_contact">Contacto - Redes</string>
    <string name="item_setting">Configuración</string>
    <string name="item_my_photos">Mis Reportes</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="titulo_tab_map">MAPA</string>
    <string name="titulo_tab_list">BIBLIOTECA</string>
    <string name="titulo_tab_mis_reportes">MIS REPORTES</string>

    <string name="nav_recomender">Recomendar</string>
    <string name="nav_privacy_policy">Aviso Legal</string>
    <string name="nav_logout">Cerrar Sesion</string>

    <!-- TODO: Slider text -->
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <!-- TODO: Login text -->
    <string name="action_sign_in_short">Crear Cuenta</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">ENTRAR</string>
    <string name="btn_link_to_register">No tiene cuenta? Crear Cuenta</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Olvido su contraseña?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <string name="action_exit">Cerrar sesion</string>
    <string name="login.error">Imposible iniciar session</string>
    <string name="login.cancel.error">Inicio de sesion cancelado</string>

    <!-- TODO: signup text -->
    <string name="nombre">Nombre</string>
    <string name="email">Email</string>

    <string name="snackbar_text">ACTIVO</string>
    <string name="snackbar_cancel">INABILITADO</string>

    <string name="ok">ACTIVO</string>
    <string name="cancel">INABILITADO</string>
    <string name="title_activity_report_detail">ReportDetailActivity</string>

</resources>
