<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_init"
            android:checked="true"
            android:icon="@drawable/inicio"
            android:title="@string/item_init" />
        <item
            android:id="@+id/item_how_work"
            android:icon="@drawable/cuenta"
            android:title="@string/item_how_work" />
        <item
            android:id="@+id/item_contact"
            android:icon="@drawable/categorias"
            android:title="@string/item_contact" />
        <item
            android:id="@+id/item_setting"
            android:icon="@drawable/configuracion"
            android:title="@string/item_setting" />
        <item
            android:id="@+id/item_photos"
            android:icon="@drawable/configuracion"
            android:title="@string/item_my_photos" />
    </group>

    <item>
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_recomender" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/nav_privacy_policy" />
        </menu>
    </item>

</menu>